@@ -1,3 +1,8 @@
+2007-04-09 Eitan Isaacson  <eitan@ascender.com>
+
+	* help/C/accerciser.xml: Updated documentation about global
+	hotkeys (bug 424489).
+
 2007-04-06 Eitan Isaacson  <eitan@ascender.com>
 
 	* src/lib/accerciser/accerciser.py: 
